Fix travel pace config button alignment.

--- a/less/v2/group.less
+++ b/less/v2/group.less
@@ -106,6 +106,7 @@
           h3 { flex: 1; }
 
           .subtitle { padding-top: 1px; }
+          [data-action=showConfiguration] { margin-right: 8px; }
 
           [data-action=changePace] {
             width: 24px;
